lab2/test_files/syntax_errors/class_missing_closing_bracket.java
public class Factorial{
    public static void main(String[] a){
        System.out.println(new Element().no_method(10));
    }
}

class Element {

